changed title and slight css adjustment

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800&display=swap"
       rel="stylesheet"
     />
-    <title>Frontend Mentor | Skilled e-learning landing page</title>
+    <title>Anson Chung - Mock Landing-Page</title>
   </head>
 
   <body>
     <nav>
-      <img src="./assets/logo-dark.svg" width="" height="27px"alt="" />
-      <button>Get Started</button>
+      <img src="./assets/logo-dark.svg" width="" height="27px" alt="" />
+      <button class="top-button">Get Started</button>
     </nav>
     <div class="grid-1 relative">
       <div class="grid-1-1">
@@ -34,31 +34,54 @@
           Our modern courses across a range of in-demand skills will give you
           the knowledge you need to live the life you want.
         </p>
-        <button class="bg-gradient-pink">Get Started</button>
+        <button class="bg-gradient-pink top-button">Get Started</button>
       </div>
       <div class="grid-1-2">
-        <img src="./assets/image-hero-desktop.png" alt="" class="hero-image absolute" />
-        <img src="./assets/image-hero-tablet.png" alt="" class="hero-image-2 absolute">
-        <img src="./assets/image-hero-mobile.png" alt="" class="hero-image-3 relative">
+        <img
+          src="./assets/image-hero-desktop.png"
+          alt=""
+          class="hero-image absolute"
+        />
+        <img
+          src="./assets/image-hero-tablet.png"
+          alt=""
+          class="hero-image-2 absolute"
+        />
+        <img
+          src="./assets/image-hero-mobile.png"
+          alt=""
+          class="hero-image-3 relative"
+        />
       </div>
     </div>
-    <div class="grid-2 ">
+    <div class="grid-2">
       <div class="grid-2-1">
         <h2>Check out our most popular courses!</h2>
       </div>
       <div class="grid-2-2 card-container relative">
-        <img src="./assets/icon-animation.svg" alt="" class="absolute icons" width="56px"/>
+        <img
+          src="./assets/icon-animation.svg"
+          alt=""
+          class="absolute icons"
+          width="56px"
+        />
         <div class="text-container">
           <h2>Animation</h2>
           <p class="">
-            Learn the latest animation <br> techniques to create stunning <br> motion
-            design and captivate your audience.
+            Learn the latest animation <br />
+            techniques to create stunning <br />
+            motion design and captivate your audience.
           </p>
-          <a href="" class=" get-start"> Get Started</a>
+          <a href="" class="get-start"> Get Started</a>
         </div>
       </div>
       <div class="grid-2-3 card-container">
-        <img src="./assets/icon-design.svg" alt="" class="absolute icons" width="56px"/>
+        <img
+          src="./assets/icon-design.svg"
+          alt=""
+          class="absolute icons"
+          width="56px"
+        />
         <div class="text-container">
           <h2>Design</h2>
           <p>
@@ -69,7 +92,12 @@
         </div>
       </div>
       <div class="grid-2-4 card-container">
-        <img src="./assets/icon-photography.svg" alt="" class="absolute icons" width="56px"/>
+        <img
+          src="./assets/icon-photography.svg"
+          alt=""
+          class="absolute icons"
+          width="56px"
+        />
         <div class="text-container">
           <h2>Photography</h2>
           <p>
@@ -80,7 +108,12 @@
         </div>
       </div>
       <div class="grid-2-5 card-container">
-        <img src="./assets/icon-crypto.svg" alt="" class="absolute icons" width="56px"/>
+        <img
+          src="./assets/icon-crypto.svg"
+          alt=""
+          class="absolute icons"
+          width="56px"
+        />
         <div class="text-container">
           <h2>Crypto</h2>
           <p>
@@ -91,7 +124,12 @@
         </div>
       </div>
       <div class="grid-2-6 card-container">
-        <img src="./assets/icon-business.svg" alt="" width="56px" class="absolute icons"/>
+        <img
+          src="./assets/icon-business.svg"
+          alt=""
+          width="56px"
+          class="absolute icons"
+        />
         <div class="text-container">
           <h2>Business</h2>
           <p>
@@ -104,7 +142,7 @@
     </div>
   </body>
   <footer class="flex">
-    <img src="./assets/logo-light.svg" width="100px" height="27px"alt="" />
+    <img src="./assets/logo-light.svg" width="100px" height="27px" alt="" />
     <button>Get Started</button>
   </footer>
 </html>
